add some java classes .reformatted the code structure