@@ -1,25 +1,28 @@
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 import io.github.cdimascio.dotenv.Dotenv;
 
-public class TicketGenerator extends UserManager {
+public class TicketGenerator {
     static Dotenv dotenv = Dotenv.load();
     private static final String QR_API_URL = dotenv.get("QR_API_URL");
     private static final String QR_SIZE = "&size=300x300";
+    private final LocationManager locInfo;
+    private final UserManager user;
 
-    LocationManager locationInfo = new LocationManager();
-    UserManager user = new UserManager();
+    TicketGenerator() {
+        locInfo = new LocationManager();
+        user = new UserManager();
+    }
 
     public void generateQR() {
         try {
-            String locationData = locationInfo.getTravelDistanceTime();
+            String locationData = locInfo.getTravelDistanceTime();
             String ticketID = "TB10000";
             String[] splitLocation = locationData.split(",");
-
             String encodedURL = encodeURL(user.getUserName(), ticketID,
-                    splitLocation[0], splitLocation[1], splitLocation[2],
-                    splitLocation[3]);
+                    splitLocation[0], splitLocation[1], splitLocation[2], splitLocation[3]);
             String URL = QR_API_URL + encodedURL + QR_SIZE;
             System.out.println("Your Ticket QR code here: " + URL);
         } catch (Exception e) {
@@ -28,28 +31,21 @@ public class TicketGenerator extends UserManager {
             generateQR();
         }
     }
-
-    public String encodeURL(String fName, String tID,
+    // overloading
+    public static String encodeURL(String fName, String tID,
                             String startLocation, String endLocation,
                             String distance, String duration) {
-        try {
-            String data = "Ticket ID: " + tID + "\n\n" +
-                    "Name: " + fName + "\n\n" +
-                    "Travel Route: " + startLocation + " -> " + endLocation + "\n" +
-                    "Distance: " + distance + "\n" +
-                    "Duration: " + duration;
-            String encodedData = URLEncoder.encode(data, "UTF-8");
-            return encodedData;
-        } catch (UnsupportedEncodingException e) {
-            e.printStackTrace();
-        }
-        return "";
+        String data = "Ticket ID: " + tID + "\n\n" +
+                "Name: " + fName + "\n\n" +
+                "Travel Route: " + startLocation + " -> " + endLocation + "\n" +
+                "Distance: " + distance + "\n" +
+                "Duration: " + duration;
+        return URLEncoder.encode(data, StandardCharsets.UTF_8);
     }
 
     public static String encodeURL(String location) {
         try {
-            String encodedData = URLEncoder.encode(location, "UTF-8");
-            return encodedData;
+            return URLEncoder.encode(location, "UTF-8");
         } catch (UnsupportedEncodingException e) {
             e.printStackTrace();
         }
